# mssp-threat-hunt-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  local.settings.json.template  pyproject.toml
.github/: copilot-instructions.md
azure_function/: .funcignore  copilot-connector-swagger.json  function_app.py  openapi.json  requirements.txt
docs/: agent-overview-v7.2.md  api.md  architecture.md  campaign-lifecycle.md  copilot-studio-campaigns.md  custom-table-ingestion-guide.md  deployment.md  evaluation.md  how-it-works-v7.2.md  intelligence-sources.md  kabir-meeting-prep.md  roadmap.md  test-log-ingestion-plan.md
infra/: attack_sim_sample.json  build_zip.py  deploy.sh  deploy_intel_feeds.sh  deploy_zip.sh  ingest_test_data.py  ingestion_config.json  intel_feed_logic_apps.bicep  kev_logic_app.bicep  main.bicep
tests/: conftest.py  copilot_evaluation.csv  copilot_evaluation_v73.csv  eval_campaign_deep.csv  eval_quick_functional.csv  run_intel_eval.py  run_intelligence_audit.py  run_live_eval.py  run_qa_dump.py  test_abuseipdb_adapter.py  test_agent_controller.py  test_agent_loop.py  test_api.py  test_api_client.py  test_audit.py  test_auto_sweep.py  test_azure_openai_adapter.py  test_blob_store.py  test_campaign_learning.py  test_chain_of_thought.py  test_complexity_classifier.py  test_composite_adapter.py  test_cve_assessor.py  test_cve_lookup.py  test_database.py  test_deconfliction.py  test_detection_engineering.py  test_enrichment_mock.py  test_exabeam_auth.py  test_executor_mock.py  test_feed_ingester.py  test_feed_monitor.py  test_hunter_budget_context.py  (+43 more)
(+173 files in other folders)
