[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mssp-hunt-agent"
version = "0.7.0"
description = "Autonomous MSSP threat hunting agent with NL interface"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
azure = [
    "azure-identity>=1.15",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
llm = [
    "openai>=1.10",
]
mcp = [
    "mcp[cli]>=1.0",
]

[project.scripts]
hunt-agent = "mssp_hunt_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mssp_hunt_agent = ["templates/*.j2", "prompts/*.md", "data/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
